<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="bottom|end"
        android:padding="@dimen/output_padding"
        android:text="@string/zero"
        android:textColor="@color/white"
        android:textSize="@dimen/output_font_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <TextView
                android:id="@+id/all_clear"
                style="@style/ActionButton"
                android:layout_weight="3"
                android:text="@string/all_clear" />

            <TextView
                android:id="@+id/divide"
                style="@style/ActionButton"
                android:text="@string/divide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seven"
                style="@style/NumberActionButton"
                android:text="@string/seven" />

            <TextView
                android:id="@+id/eight"
                style="@style/NumberActionButton"
                android:text="@string/eight" />

            <TextView
                android:id="@+id/nine"
                style="@style/NumberActionButton"
                android:text="@string/nine" />


            <TextView
                android:id="@+id/multiply"
                style="@style/ActionButton"
                android:text="@string/multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/four"
                style="@style/NumberActionButton"
                android:text="@string/four" />

            <TextView
                android:id="@+id/five"
                style="@style/NumberActionButton"
                android:text="@string/five" />

            <TextView
                android:id="@+id/six"
                style="@style/NumberActionButton"
                android:text="@string/six" />


            <TextView
                android:id="@+id/minus"
                style="@style/ActionButton"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/one"
                style="@style/NumberActionButton"
                android:text="@string/one" />

            <TextView
                android:id="@+id/two"
                style="@style/NumberActionButton"
                android:text="@string/two" />

            <TextView
                android:id="@+id/three"
                style="@style/NumberActionButton"
                android:text="@string/three" />


            <TextView
                android:id="@+id/plus"
                style="@style/ActionButton"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/zero"
                style="@style/NumberActionButton"
                android:layout_weight="3"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/equal"
                style="@style/ActionButton"
                android:text="@string/equal" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
